# ai-sdlc-project-cost-estimator

./: .env.example  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  contingency_admin.py  dev_sizing_admin.py  discovery_sizing_admin.py  main.py  prefill.py  pricing.py  pyproject.toml  qa_sizing_admin.py  rate_card_admin.py  roster_agent.py  roster_agui.py  runtime.py  slug.py  tooling_classifier.py  wbs_agent.py
backend/admin/: contingency_admin.py  dev_sizing_admin.py  discovery_sizing_admin.py  qa_sizing_admin.py  rate_card_admin.py  reduction_bands_admin.py  sizing_method_admin.py  staffing_admin.py
backend/agents/: __init__.py  prefill.py  roster_agent.py  roster_agui.py  tooling_classifier.py  wbs_agent.py  wbs_leaf_estimator.py
backend/alembic/: README  env.py
backend/db/: migrate.py  neo4j_adapter.py  orm_models.py  postgres_adapter.py  qdrant_adapter.py  repositories.py
backend/evals/: __init__.py  agents.py  datasets.py  judge.py  models.py  report.py  rubrics.py  run.py  runner.py  synthetic.py
backend/models/: estimation_state.py  project_schema.py  twin_outputs.py  validators.py  wbs_schema.py  wbs_task.py
backend/observability/: correlation.py  langfuse_wrapper.py  logging_config.py  request_logging.py
backend/orchestrator/: ai_acceleration.py  calibration_index.py  embeddings.py  graph.py  llm.py  montecarlo.py  role_attribution.py  smoke.py  ssrf.py  staffing.py  usage.py
backend/routers/: __init__.py  admin.py  catalog.py  drafts.py  estimates.py  (+2 more)
(+230 files in other folders)
